--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,6 @@ description = "Chat bot animation CH le Mans"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "google-generativeai>=0.8.5",
     "streamlit>=1.45.1",
 ]
